# mini-cactbot-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: commands.rs  components.rs  config.toml  game.rs  generate_components.rs  main.rs  minicact.rs  recommendations.rs  startup.rs
src/game/: payout.rs
src/minicact/: commands.rs  components.rs  game.rs  generate_components.rs  recommendations.rs
src/minicact/game/: board.rs  computations.rs  payout.rs
src/unused/: experiments.jl
