[package]
name = "mini-cactbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
chrono = "0.4.23"
config = "0.13.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.6.0"
phf = "0.11.1"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
smallset = "0.1.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
chrono = "0.4.23"
smallset = "0.1.1"